--- a/extension/options.html
+++ b/extension/options.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <script type="text/javascript" src="vendor/domvm.nano.min.js"></script>
+  <script type="text/javascript" src="vendor/domvm.nano.js"></script>
   <script type="text/javascript" src="options.js"></script>
 </body>
 </html>
