--- a/extension/options.html
+++ b/extension/options.html
@@ -2,9 +2,21 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <style>
+    body {
+      padding: 0.5rem 2rem 1rem;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: rgb(32, 32, 35);
+        color: rgb(249, 249, 250);
+      }
+    }
+  </style>
 </head>
 <body>
-  <script type="text/javascript" src="vendor/domvm.nano.min.js"></script>
+  <script type="text/javascript" src="vendor/lighterhtml.js"></script>
   <script type="text/javascript" src="options.js"></script>
 </body>
 </html>
